--- a/GLTutorial/GLTutorial.vcxproj.filters
+++ b/GLTutorial/GLTutorial.vcxproj.filters
@@ -43,4 +43,9 @@
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="assets\container.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
